Add default controllers; add Exceptions handlers